@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/curl-7.19.6.ebuild,v 1.8 2009/09/13 12:36:08 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/curl-7.20.0.ebuild,v 1.1 2010/03/11 18:01:15 spatz Exp $
 
 # NOTE: If you bump this ebuild, make sure you bump dev-python/pycurl!
 
@@ -16,15 +16,11 @@ SRC_URI="http://curl.haxx.se/download/${P}.tar.bz2"
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~ppc-aix ~x64-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-#IUSE="ssl ipv6 ldap ares gnutls nss idn kerberos test"
-IUSE="ssl ipv6 ldap ares gnutls libssh2 nss idn kerberos test"
-
-# TODO - change to openssl USE flag in the not too distant future
-# https://bugs.gentoo.org/show_bug.cgi?id=207653#c3 (April 2008)
+IUSE="openssl ipv6 ldap ares gnutls libssh2 nss idn kerberos test"
 
 RDEPEND="gnutls? ( net-libs/gnutls app-misc/ca-certificates )
 	nss? ( !gnutls? ( dev-libs/nss app-misc/ca-certificates ) )
-	ssl? ( !gnutls? ( !nss? ( dev-libs/openssl app-misc/ca-certificates ) ) )
+	openssl? ( !gnutls? ( !nss? ( dev-libs/openssl app-misc/ca-certificates ) ) )
 	ldap? ( net-nds/openldap )
 	idn? ( net-dns/libidn )
 	ares? ( >=net-dns/c-ares-1.4.0 )
@@ -40,29 +36,27 @@ DEPEND="${RDEPEND}
 		dev-lang/perl
 	)"
 # used - but can do without in self test: net-misc/stunnel
-#S="${WORKDIR}"/${MY_P}
 
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
-	epatch "${FILESDIR}"/curl-7.17.0-strip-ldflags.patch
+	epatch "${FILESDIR}"/${P}-strip-ldflags.patch
+	epatch "${FILESDIR}"/${PN}-7.19.7-test241.patch
+
+	epatch "${FILESDIR}"/${PN}-7.19.7-interix.patch
 
 	epatch "${FILESDIR}"/${PN}-7.18.2-prefix.patch
 	eprefixify curl-config.in || die "eprefixify failed"
 }
 
 src_compile() {
-	if [[ ${CHOST} == *-interix* ]] ; then
-		export ac_cv_func_poll=no
-		export skipcheck_poll=yes
-	fi
-
 	myconf="$(use_enable ldap)
 		$(use_enable ldap ldaps)
 		$(use_with idn libidn)
 		$(use_with kerberos gssapi "${EPREFIX}"/usr)
 		$(use_with libssh2)
 		$(use_enable ipv6)
+		$(use_enable ares)
 		--enable-http
 		--enable-ftp
 		--enable-gopher
@@ -70,6 +64,10 @@ src_compile() {
 		--enable-dict
 		--enable-manual
 		--enable-telnet
+		--enable-smtp
+		--enable-pop3
+		--enable-imap
+		--enable-rtsp
 		--enable-nonblocking
 		--enable-largefile
 		--enable-maintainer-mode
@@ -77,20 +75,13 @@ src_compile() {
 		--without-krb4
 		--without-spnego"
 
-	if use ipv6 && use ares; then
-		elog "c-ares support disabled because it is incompatible with ipv6."
-		myconf="${myconf} --disable-ares"
-	else
-		myconf="${myconf} $(use_enable ares)"
-	fi
-
 	if use gnutls; then
 		myconf="${myconf} --without-ssl --with-gnutls --without-nss"
 		myconf="${myconf} --with-ca-bundle=${EPREFIX}/etc/ssl/certs/ca-certificates.crt"
 	elif use nss; then
 		myconf="${myconf} --without-ssl --without-gnutls --with-nss"
 		myconf="${myconf} --with-ca-bundle=${EPREFIX}/etc/ssl/certs/ca-certificates.crt"
-	elif use ssl; then
+	elif use openssl; then
 		myconf="${myconf} --without-gnutls --without-nss --with-ssl"
 		myconf="${myconf} --without-ca-bundle --with-ca-path=${EPREFIX}/etc/ssl/certs"
 	else
